<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id = "@+id/body"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background = "@drawable/background"

    tools:context=".MainActivity">

    <TextView
        android:id = "@+id/timer"
        android:contentDescription="@string/numSecondDesc"
        android:layout_width="match_parent"
        android:gravity = "center"
        android:textColor="@color/red"
        android:textSize="50sp"
        android:layout_height="wrap_content"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height ="0dp"
    android:layout_weight="1"
    android:orientation="vertical"


    >
    <TextView
        android:id = "@+id/question"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layoutQuestionHeight"
        android:background="@drawable/solid_color_shape"
        android:gravity="center_horizontal"
        android:layout_marginStart ="20dp"
        android:clickable="true"
        android:contentDescription="@string/QuestionContentDesc"
        android:focusable="true"
        android:layout_marginEnd ="20dp"
        android:textSize="@dimen/questionTextSize"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        >

        <ImageView
            android:id = "@+id/restart"
            android:layout_width="@dimen/delNextBtn"
            android:layout_height="@dimen/delNextBtn"
            android:contentDescription = "@string/description_restart"
            android:clickable = "true"
            android:focusable = "true"
            android:layout_marginStart="5dp"
            android:onClick="restart"
            android:src="@drawable/restart"
            > </ImageView>

        <ImageView
            android:id = "@+id/delBtn"
            android:layout_width="@dimen/delNextBtn"
            android:layout_height="@dimen/delNextBtn"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/delBtnDesc"
            android:clickable = "true"
            android:focusable = "true"
            android:src="@drawable/delete"
            > </ImageView>


        <ImageView
            android:id = "@+id/nextBtn"
            android:layout_width= "@dimen/delNextBtn"
            android:layout_height="@dimen/delNextBtn"
            android:layout_alignParentEnd="true"
            android:src="@drawable/next"
            android:clickable="true"
            android:focusable = "true"
            android:contentDescription="@string/nextBtnDesc"
            > </ImageView>
    </RelativeLayout>
</LinearLayout>


<LinearLayout
    android:id = "@+id/confetti"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="top"
    android:orientation = "vertical">
            <TextView
                android:id = "@+id/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:clickable="true"
                android:focusable = "true"
                android:onClick="show_answer"
                android:textSize="@dimen/answerSize"
                android:textColor = "@color/white"
                android:textStyle="bold"
                android:text="@string/choice1" />

            <TextView
                android:id = "@+id/wrong1"
                android:textStyle="bold"
                android:textColor = "@color/white"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layoutTextHeight"
                android:textSize="@dimen/answerSize"
                android:gravity="center"
                android:focusable = "true"
                android:clickable="true"
                android:onClick="show_answer"
                android:text="@string/choice2" />

            <TextView
                android:id = "@+id/wrong2"
                android:textColor = "@color/white"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textSize="@dimen/answerSize"
                android:clickable="true"
                android:focusable="true"
                android:onClick="show_answer"
                android:layout_height="@dimen/layoutTextHeight"
                android:text="@string/choice3" />


     </LinearLayout>
        <RelativeLayout
            android:layout_width = "match_parent"
            android:layout_height= "wrap_content"

            >

            <ImageView
                android:id = "@+id/editBtn"
                android:layout_width="@dimen/addEditBtn"
                android:layout_height="@dimen/addEditBtn"
                android:layout_gravity="start"
                android:contentDescription="@string/editBtnDesc"
                android:clickable="true"
                android:focusable = "true"
                android:src="@drawable/edit">

            </ImageView>

            <ImageView
                    android:id = "@+id/addBtn"
                    android:layout_width="@dimen/addEditBtn"
                    android:layout_height="@dimen/addEditBtn"
                    android:layout_alignParentEnd= "true"
                    android:clickable="true"
                    android:focusable = "true"
                     android:contentDescription="@string/addBtnDesc"
                    android:src="@drawable/iconmonstr_plus_circle_lined">
            </ImageView>
        </RelativeLayout>
</LinearLayout>